cmake_minimum_required(VERSION 3.4)
 
PROJECT(artoolkit-examples)

include(../../cpackConfiguration.cmake)
include(../../cpackArtoolkit-examplesConfiguration.cmake)
include(../cpackDebConfiguration.cmake)


#TODO: Somehow the CMake build produces util files that contain debug information. We do not want that. That is why we strip it here.
foreach(util-file ${AR_examples})
    execute_process(COMMAND strip -s -o ${util-file} ${util-file})
endforeach(util-file)

#SETUP directory structure with correct permissions
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME} DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/Data DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/Data/multi DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/DataNFT DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/Data2 DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/Wrl DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/Wrl/maps DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/OSG DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(DIRECTORY DESTINATION /usr/share/${CPACK_DEBIAN_PACKAGE_NAME}/OSG/Images DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(DIRECTORY DESTINATION /usr/bin DIRECTORY_PERMISSIONS
OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)



#Name needed dependencies
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "artoolkit-lib, libc6")

INCLUDE(CPack)
